add fullscreen mode with keyboard shortcuts

--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,25 @@ iframe {
   flex: none;
   width: 100%;
 }
+
+.fullscreenToggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  z-index: 2;
+}
+
+.fullscreenToggle:hover {
+  cursor: pointer;
+}
+
+.fullscreen {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: #fff;
+}
